fixed spacing for mobile

--- a/styles.css
+++ b/styles.css
@@ -50,12 +50,13 @@ body{
 }
 
 #info div {
-    padding: 3rem;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
     background: rgb(241, 229, 253);
-    margin: 0.5rem;
+    margin-bottom: 0.5rem;
     border-radius: 10px;
     color: rgb(255, 0, 221);
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     text-align: center;
 }
 
